mux-compiler/tests/snapshots/codegen_integration__codegen_integration__test.snap
---
source: mux-compiler/tests/codegen_integration.rs
expression: ll_content
---
; ModuleID = 'mux_module'
source_filename = "mux_module"

@type_name_MyInt = dso_local unnamed_addr constant [6 x i8] c"MyInt\00", align 1
@str_0 = global [10 x i8] c"MyInt of \00"
@str_1 = global [11 x i8] c"test.val: \00"

declare ptr @mux_value_from_string(ptr)

declare ptr @mux_new_string_from_cstr(ptr)

declare void @mux_print(ptr)

declare void @mux_println_val(ptr)

declare void @exit(i32)

declare ptr @malloc(i64)

declare ptr @mux_string_concat(ptr, ptr)

declare ptr @mux_value_get_string(ptr)

declare ptr @mux_value_from_string.1(ptr)

declare ptr @mux_int_to_string(i64)

declare ptr @mux_int_to_float(i64)

declare ptr @mux_float_to_int(double)

declare ptr @mux_float_to_string(double)

declare ptr @mux_bool_to_string(i32)

declare ptr @mux_bool_to_int(ptr)

declare ptr @mux_bool_to_float(ptr)

declare ptr @mux_string_to_string(ptr)

declare ptr @mux_list_to_string(ptr)

declare ptr @mux_list_value(ptr)

declare ptr @mux_map_value(ptr)

declare ptr @mux_set_value(ptr)

declare ptr @mux_map_to_string(ptr)

declare i32 @mux_register_object_type(ptr, i64)

declare ptr @mux_alloc_object(i32)

declare void @mux_free_object(ptr)

declare ptr @mux_get_object_ptr(ptr)

declare ptr @mux_set_to_string(ptr)

declare ptr @mux_optional_to_string(ptr)

declare ptr @mux_value_from_optional(ptr)

declare ptr @mux_value_get_list(ptr)

declare ptr @mux_value_get_map(ptr)

declare ptr @mux_value_to_string(ptr)

declare ptr @mux_list_value.2(ptr)

declare ptr @mux_map_value.3(ptr)

declare ptr @mux_set_value.4(ptr)

declare ptr @mux_range(i64, i64)

declare ptr @mux_new_list()

declare ptr @mux_new_map()

declare ptr @mux_new_set()

declare ptr @mux_value_add(ptr, ptr)

declare i64 @mux_value_get_int(ptr)

declare double @mux_value_get_float(ptr)

declare i32 @mux_value_get_bool(ptr)

declare i32 @mux_value_get_type_tag(ptr)

declare void @mux_free_value(ptr)

declare void @mux_list_push_back(ptr, ptr)

declare ptr @mux_list_get(ptr, i64)

declare ptr @mux_list_get_value(ptr, i64)

declare i64 @mux_list_length(ptr)

declare i64 @mux_value_list_length(ptr)

declare ptr @mux_value_list_get_value(ptr, i64)

declare ptr @mux_list_pop_back(ptr)

declare void @mux_list_push(ptr, ptr)

declare ptr @mux_list_pop(ptr)

declare void @mux_list_push_front(ptr, ptr)

declare ptr @mux_list_pop_front(ptr)

declare void @mux_list_push_back_value(ptr, ptr)

declare void @mux_list_push_value(ptr, ptr)

declare void @mux_list_push_front_value(ptr, ptr)

declare ptr @mux_list_pop_back_value(ptr)

declare ptr @mux_list_pop_value(ptr)

declare ptr @mux_list_pop_front_value(ptr)

declare i1 @mux_list_is_empty(ptr)

declare void @mux_map_put(ptr, ptr, ptr)

declare ptr @mux_map_get(ptr, ptr)

declare i1 @mux_map_contains(ptr, ptr)

declare ptr @mux_map_remove(ptr, ptr)

declare void @mux_set_add(ptr, ptr)

declare i1 @mux_set_contains(ptr, ptr)

declare i1 @mux_set_remove(ptr, ptr)

declare i64 @mux_set_size(ptr)

declare i1 @mux_set_is_empty(ptr)

declare i64 @mux_map_size(ptr)

declare i1 @mux_map_is_empty(ptr)

declare ptr @mux_int_value(i64)

declare ptr @mux_float_value(double)

declare ptr @mux_bool_value(i32)

declare ptr @mux_string_value(ptr)

declare ptr @mux_int_to_string.5(i64)

declare i64 @mux_int_from_value(ptr)

declare double @mux_float_from_value(ptr)

declare i32 @mux_bool_from_value(ptr)

declare ptr @mux_string_from_value(ptr)

declare ptr @mux_result_ok_int(i64)

declare ptr @mux_result_err_str(ptr)

declare ptr @mux_optional_some_int(i64)

declare ptr @mux_optional_none()

declare ptr @mux_result_ok_int.6(i64)

declare ptr @mux_result_err_str.7(ptr)

declare i32 @mux_optional_discriminant(ptr)

declare ptr @mux_optional_data(ptr)

declare i32 @mux_result_discriminant(ptr)

declare ptr @mux_result_data(ptr)

define ptr @MyInt.to_string(ptr %0) {
entry:
  %self = alloca ptr, align 8
  store ptr %0, ptr %self, align 8
  %call = call ptr @mux_new_string_from_cstr(ptr @str_0)
  %load_self_for_field_access = load ptr, ptr %self, align 8
  %self_data_ptr = call ptr @mux_get_object_ptr(ptr %load_self_for_field_access)
  %val = getelementptr inbounds { ptr }, ptr %self_data_ptr, i32 0, i32 0
  %val1 = load ptr, ptr %val, align 8
  %get_int = call i64 @mux_value_get_int(ptr %val1)
  %int_to_str = call ptr @mux_int_to_string(i64 %get_int)
  %new_str = call ptr @mux_new_string_from_cstr(ptr %int_to_str)
  %get_string = call ptr @mux_value_get_string(ptr %call)
  %get_string2 = call ptr @mux_value_get_string(ptr %new_str)
  %string_concat = call ptr @mux_string_concat(ptr %get_string, ptr %get_string2)
  %from_string = call ptr @mux_value_from_string(ptr %string_concat)
  ret ptr %from_string
}

define ptr @MyInt.new(i64 %0) {
entry:
  %type_id = call i32 @mux_register_object_type(ptr @type_name_MyInt, i64 ptrtoint (ptr getelementptr ({ ptr }, ptr null, i32 1) to i64))
  %obj_ptr = call ptr @mux_alloc_object(i32 %type_id)
  %data_ptr = call ptr @mux_get_object_ptr(ptr %obj_ptr)
  %val = getelementptr inbounds { ptr }, ptr %data_ptr, i32 0, i32 0
  store i64 %0, ptr %val, align 4
  ret ptr %obj_ptr
}

define void @main() {
entry:
  %MyInt.new_call = call ptr @MyInt.new()
  %test = alloca ptr, align 8
  store ptr %MyInt.new_call, ptr %test, align 8
  %test1 = load ptr, ptr %test, align 8
  %data_ptr_assign = call ptr @mux_get_object_ptr(ptr %test1)
  %val = getelementptr inbounds { ptr }, ptr %data_ptr_assign, i32 0, i32 0
  %call = call ptr @mux_int_value(i64 1)
  store ptr %call, ptr %val, align 8
  %call2 = call ptr @mux_new_string_from_cstr(ptr @str_1)
  %test3 = load ptr, ptr %test, align 8
  %data_ptr = call ptr @mux_get_object_ptr(ptr %test3)
  %val4 = getelementptr inbounds { ptr }, ptr %data_ptr, i32 0, i32 0
  %val5 = load ptr, ptr %val4, align 8
  %get_int = call i64 @mux_value_get_int(ptr %val5)
  %int_to_str = call ptr @mux_int_to_string(i64 %get_int)
  %new_str = call ptr @mux_new_string_from_cstr(ptr %int_to_str)
  %get_string = call ptr @mux_value_get_string(ptr %call2)
  %get_string6 = call ptr @mux_value_get_string(ptr %new_str)
  %string_concat = call ptr @mux_string_concat(ptr %get_string, ptr %get_string6)
  %from_string = call ptr @mux_value_from_string(ptr %string_concat)
  call void @mux_println_val(ptr %from_string)
  %test7 = load ptr, ptr %test, align 8
  %MyInt.to_string_call = call ptr @MyInt.to_string(ptr %test7)
  call void @mux_println_val(ptr %MyInt.to_string_call)
  ret void
}
